# tgconsolebot

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build
src/: main.cpp  sessionmanager.cpp  sessionmanager.h  sticker.cpp  sticker.h  stickermanager.cpp  stickermanager.h
